<resources>
    <string name="app_name">BORG</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="task">Task</string>
    <string name="materials">Materials</string>
    <string name="clients">Clients</string>
    <string name="users">Users</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="signup">SignUP</string>
    <string name="welcome">Welcome</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="view">View</string>
    <string name="logout">Logout</string>
    <string name="task_id">Task ID</string>
    <string name="date">Date</string>
    <string name="client_name">Client Name</string>
    <string name="options">Options</string>
    <string name="client_id">Client ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="material_id">Material ID</string>
    <string name="quantity">Quantity</string>
    <string name="purchase_price">Purchase price</string>
    <string name="selling_price">Selling price</string>
    <string name="pause_length">Pause length</string>
    <string name="worker">Worker</string>
    <string name="client">Client</string>
    <string name="user_id">User ID</string>
    <string name="role">Role</string>
    <string name="my_account_details">My account details</string>
    <string name="save">Save</string>
    <string name="invoice_id">Invoice ID</string>
    <string name="material">Material</string>
    <string name="price">Price</string>
    <string name="sum">Sum</string>
    <string name="invoice">Invoice</string>
    <string name="delete">Delete</string>
</resources>