<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="8dp"
    android:stretchColumns="1,2,3,4,5,6,7,8"
    tools:context=".activity.admin.fragment.AdminUserFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>
                    <TextView
                        android:id="@+id/tab_admin_users_col1"
                        android:text="@string/user_id"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="1"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col2"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="2"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col3"
                        android:text="@string/surname"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="3"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col4"
                        android:text="@string/address"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="4"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col5"
                        android:text="@string/phone_number"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="5"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col6"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="6"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col7"
                        android:text="@string/username"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="7"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col8"
                        android:text="@string/password"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="8"/>
                    <TextView
                        android:id="@+id/tab_admin_users_col9"
                        android:text="@string/role"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="8"/>
                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_admin_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/table_admin_users" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>