<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="8dp"
    android:stretchColumns="1,2,3,4,5"
    tools:context=".activity.admin.fragment.AdminMaterialsFragment">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>
                    <TextView
                        android:id="@+id/tab_admin_materials_col1"
                        android:text="@string/material_id"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="1"/>
                    <TextView
                        android:id="@+id/tab_admin_materials_col2"
                        android:text="@string/name"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="2"/>
                    <TextView
                        android:id="@+id/tab_admin_materials_col3"
                        android:text="@string/quantity"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="3"/>
                    <TextView
                        android:id="@+id/tab_admin_materials_col4"
                        android:text="@string/purchase_price"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="4"/>
                    <TextView
                        android:id="@+id/tab_admin_materials_col5"
                        android:text="@string/selling_price"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="10dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_column="5"/>

                </TableRow>
            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_admin_materials"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/table_admin_materials" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>